<resources>
    <string name="app_name">Visual Search Ecommerce</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="see_more">See More</string>
    <string name="result">result</string>
    <string name="product_search">Product Search</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="logo">Visual Search Ecommerce</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_phonenumber">Phone Number</string>
    <string name="hint_confirm_pass">Confirm Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Create a new account now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="error_input">Make sure this field is not Empty</string>
    <string name="error_confirm">Password does not match</string>
    <string name="error_phone">Invalid Phone</string>
    <string name="filter_title">Filter</string>
    <string name="search_title">Search</string>
    <string name="product_title">Title</string>
    <string name="product_description">Secondary text</string>

    <string name="filter">FILTER</string>
    <string name="price">Price</string>
    <string name="price_tag">$2000</string>
    <string name="ksh">KES0–200000</string>
    <string name="morning">Good  Morning!</string>
    <string name="night">Good  Night!</string>
    <string name="afternoon">Good  Afternoon!</string>
    <string name="evening">Good  Evening!</string>

    <string name="wishlist_label">WishList</string>
    <string name="account_label">MyAccount</string>
    <string name="action_signin">SignIn</string>
    <string name="action_settings">Settings</string>
    <string name="myorder_label">MyOrders</string>
    <string name="action_cart">Cart</string>
    <string name="action_favorite">Favourite</string>
    <string name="edit_your_shipping_address">Edit your shipping address</string>
    <string name="edit_your_phonenumber">Edit your phonenumber</string>
    <string name="search_results">Search Results</string>
    <string name="edit">Edit</string>
    <string name="edit_username">Edit username</string>

    <string name="dialog_message_success">Payment made successfully</string>
    <string name="title_success">Payment Notification</string>
    <string name="title_wait">Please Wait</string>
    <string name="dialog_message_processing">Processing…</string>




</resources>