<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">
            <TextView
                android:id="@+id/textresetpass"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/activity_margin"
                android:text="@string/lbl_forgot_password"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textresetpassinfo"
                />
            <TextView
                android:id="@+id/textresetpassinfo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginTop="32dp"
                android:text="@string/forgot_password_msg"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/textColorPrimary"
                app:layout_constraintBottom_toTopOf="@id/textInputemail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textresetpass" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/textColorPrimary"
                app:boxStrokeColor="@color/textColorPrimary"
                app:hintTextAppearance="@color/textColorPrimary"
                app:layout_constraintBottom_toTopOf="@id/reset_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textresetpassinfo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="4dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/reset_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/activity_margin"
                app:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/btn_reset_password"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold"
                app:cornerRadius="16dp"
                app:rippleColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputemail" />


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</FrameLayout>
